--- a/css/style.css
+++ b/css/style.css
@@ -3517,9 +3517,9 @@ input[type="button"].btn-block {
   background-size: 100% 100%; }
 
   .logo-img{
-width:10%;
-height: 15%;
-object-fit: scale-down;
+width:30%;
+height:auto;
+max-width:300px;
   }
 
 @media (max-width: 575.98px) {
@@ -8172,7 +8172,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
   background: transparent !important;
-  position: absolute;
+  position:absolute;
   top: 20px;
   left: 0;
   right: 0;
@@ -8181,7 +8181,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light {
       background: transparent
        !important;
-      position: relative;
+      position: fixed;
       top: 0; } }
   .ftco-navbar-light .navbar-brand {
     color: #fff; }
